# Hackin-Osint-Shodan

./: README.md  mapa_shodan.html  pyproject.toml
docs/: ShodanScript.md
src/: login_automation.py  mapa_shodan.py  pyshodan.py  resultados_shodan.json  resultados_validos.json  shodansearch.py
